<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/traffic_accident"
            android:checked="true"
            android:layout_marginLeft="24dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio_blue"
            android:layout_width="match_parent"
            android:text="@string/courier_lateness"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_lateness"
            android:layout_marginLeft="24dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:text="@string/courier_cancelled"
            android:checked="false" />
    </RadioGroup>

</LinearLayout>