<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.logisticdelivery.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_actual_order"
            app:destination="@id/nav_actual_order" />
    </fragment>


    <fragment
        android:id="@+id/nav_actual_order"
        android:name="com.example.logisticdelivery.ui.actualorders.ActualOrdersFragment"
        android:label="@string/menu_actual_order"
        tools:layout="@layout/fragment_actual_orders_list" >
        <action
            android:id="@+id/action_nav_actual_order_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_history_order"
        android:name="com.example.logisticdelivery.ui.orderhistory.OrderHistoryFragment"
        android:label="@string/menu_history_order"
        tools:layout="@layout/fragment_orders_history_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.logisticdelivery.ui.settings.SettingsActivity$SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/settings_activity"/>


</navigation>